--- a/pollyuk-ui/package.json
+++ b/pollyuk-ui/package.json
@@ -14,9 +14,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "bulma": "^0.7.4",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
+    "buefy": "^0.7.5",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
